Fixes button dark mode

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ main {
   border: 1px solid #ccc;
   cursor: pointer;
   border-radius: 5px;
-  transition: background 0.2s;
+  /* transition: background 0.2s; */
 }
 
 .controls button:hover,
